--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+cs490-finalproject-026394783be7.json
 
 npm-debug.log*
 yarn-debug.log*
