--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.2",
     "socket.io-client": "^3.1.1",
     "web-vitals": "^1.1.0"
