--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.2",
+    "react-timer-hook": "^3.0.2",
     "socket.io-client": "^3.1.2",
     "web-vitals": "^1.1.0"
   },
