--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-cs490-finalproject-026394783be7.json
+google-credentials.json
 
 npm-debug.log*
 yarn-debug.log*
