--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 .env.test.local
 .env.production.local
 google-credentials.json
+cs490-finalproject-026394783be7.json
 
 npm-debug.log*
 yarn-debug.log*
